--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/reset.css">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="assets\reset.css">
+    <link rel="stylesheet" href="assets\style.css">
     <title>JavaScript Code Quiz</title>
 </head>
 <body>
+    <header>
+        <div>
+            <button class="high-score black-border">View high scores</button>
+        </div>
+        <div class="timer-box black-border">
+            <div class="black-border">Timer:</div>
+            <div class="timer-count"></div>
+        </div>
+    </header>
+    <main>
+        <section class="quiz-box black-border">
+            <button class="start-quiz">Start Quiz</button>
+            <div></div>
+        </section>
+    </main>
     
 </body>
-<script src="/assets/script.js"></script>
+<script src="assets\script.js"></script>
 </html>
