added button for high score, quiz is now generated on start button click

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <div>
             <button class="high-score black-border">View high scores</button>
         </div>
+        <div>
+        <button class="start-quiz">Start Quiz</button>
+        </div>
         <div class="timer-box black-border">
             <div class="black-border">Timer:</div>
             <div class="timer-count"></div>
@@ -20,8 +23,8 @@
     </header>
     <main>
         <section class="quiz-box black-border">
-            <button class="start-quiz">Start Quiz</button>
-            <div></div>
+            <h3 class="question">Do you have what it takes to be a developer?</h3>
+            <div class="answer-bank"></div>
         </section>
     </main>
     
