the user's score is now tracked in variable 'score' and started endQuiz() functionality

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
     </header>
     <main>
         <section class="quiz-box black-border">
-            <h3 class="question">Do you have what it takes to be a developer?</h3>
+            <h3 class="question">Would you like to test your Javascript knowledge?</h3>
             <div class="answer-bank"></div>
+            <form class="initials-section">
+                <label for="initials">Initials</label>
+                <input type="text" name="initials" id="initials" placeholder="JS"/>
+            </form>
         </section>
     </main>
     
