fixed the reset button--it now works as intended

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div>
         <button class="start-quiz">Start Quiz</button>
         </div>
-        <div class="timer-box black-border">
-            <div class="black-border">Timer:</div>
+        <div class="timer-box">
+            <div class="timer-label">Timer:</div>
             <div class="timer-count"></div>
         </div>
     </header>
